--- a/css/index.css
+++ b/css/index.css
@@ -93,6 +93,15 @@
 			#text{
 				text-align:center; color:red;
 			}
+			#name{
+				font-weight:700; font-size:11.5pt;
+			}
+			#name2{
+				font-size:9pt; color:#6e6e6e;
+			}
+			.recent-text{
+				position:relative; top:8px;
+			}
 			a{
 				color:white;
 			}
